DSGE/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> NAME EQUALS atom
Rule 2     arglist -> arglist COMMA NAME
Rule 3     arglist -> arglist COMMA number
Rule 4     arglist -> number
Rule 5     arglist -> NAME
Rule 6     parameters -> LPAREN RPAREN
Rule 7     parameters -> LPAREN arglist RPAREN
Rule 8     function -> NAME parameters
Rule 9     number -> INTEGER
Rule 10    number -> FLOAT
Rule 11    number -> number PLUS number
Rule 12    number -> number MINUS number
Rule 13    number -> number TIMES number
Rule 14    number -> number DIVIDE number
Rule 15    number -> number EXP number
Rule 16    atom -> atom PLUS atom
Rule 17    atom -> atom MINUS atom
Rule 18    atom -> atom TIMES atom
Rule 19    atom -> atom DIVIDE atom
Rule 20    atom -> atom EXP atom
Rule 21    atom -> number PLUS atom
Rule 22    atom -> number MINUS atom
Rule 23    atom -> number TIMES atom
Rule 24    atom -> number DIVIDE atom
Rule 25    atom -> number EXP atom
Rule 26    number -> MINUS number
Rule 27    number -> LPAREN number RPAREN
Rule 28    atom -> LPAREN atom RPAREN
Rule 29    variable -> NAME
Rule 30    atom -> number
Rule 31    atom -> variable
Rule 32    atom -> function

Terminals, with rules where they appear

COMMA                : 2 3
DIVIDE               : 14 19 24
EQUALS               : 1
EXP                  : 15 20 25
FLOAT                : 10
INTEGER              : 9
LPAREN               : 6 7 27 28
MINUS                : 12 17 22 26
NAME                 : 1 2 5 8 29
PLUS                 : 11 16 21
RPAREN               : 6 7 27 28
TIMES                : 13 18 23
error                : 

Nonterminals, with rules where they appear

arglist              : 2 3 7
atom                 : 1 16 16 17 17 18 18 19 19 20 20 21 22 23 24 25 28
function             : 32
number               : 3 4 11 11 12 12 13 13 14 14 15 15 21 22 23 24 25 26 27 30
parameters           : 8
statement            : 0
variable             : 31

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . NAME EQUALS atom

    NAME            shift and go to state 2

    statement                      shift and go to state 1

state 1

    (0) S' -> statement .



state 2

    (1) statement -> NAME . EQUALS atom

    EQUALS          shift and go to state 3


state 3

    (1) statement -> NAME EQUALS . atom
    (16) atom -> . atom PLUS atom
    (17) atom -> . atom MINUS atom
    (18) atom -> . atom TIMES atom
    (19) atom -> . atom DIVIDE atom
    (20) atom -> . atom EXP atom
    (21) atom -> . number PLUS atom
    (22) atom -> . number MINUS atom
    (23) atom -> . number TIMES atom
    (24) atom -> . number DIVIDE atom
    (25) atom -> . number EXP atom
    (28) atom -> . LPAREN atom RPAREN
    (30) atom -> . number
    (31) atom -> . variable
    (32) atom -> . function
    (9) number -> . INTEGER
    (10) number -> . FLOAT
    (11) number -> . number PLUS number
    (12) number -> . number MINUS number
    (13) number -> . number TIMES number
    (14) number -> . number DIVIDE number
    (15) number -> . number EXP number
    (26) number -> . MINUS number
    (27) number -> . LPAREN number RPAREN
    (29) variable -> . NAME
    (8) function -> . NAME parameters

    LPAREN          shift and go to state 8
    INTEGER         shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 6
    NAME            shift and go to state 4

    atom                           shift and go to state 5
    number                         shift and go to state 7
    variable                       shift and go to state 9
    function                       shift and go to state 10

state 4

    (29) variable -> NAME .
    (8) function -> NAME . parameters
    (6) parameters -> . LPAREN RPAREN
    (7) parameters -> . LPAREN arglist RPAREN

    PLUS            reduce using rule 29 (variable -> NAME .)
    MINUS           reduce using rule 29 (variable -> NAME .)
    TIMES           reduce using rule 29 (variable -> NAME .)
    DIVIDE          reduce using rule 29 (variable -> NAME .)
    EXP             reduce using rule 29 (variable -> NAME .)
    $end            reduce using rule 29 (variable -> NAME .)
    RPAREN          reduce using rule 29 (variable -> NAME .)
    LPAREN          shift and go to state 14

    parameters                     shift and go to state 13

state 5

    (1) statement -> NAME EQUALS atom .
    (16) atom -> atom . PLUS atom
    (17) atom -> atom . MINUS atom
    (18) atom -> atom . TIMES atom
    (19) atom -> atom . DIVIDE atom
    (20) atom -> atom . EXP atom

    $end            reduce using rule 1 (statement -> NAME EQUALS atom .)
    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    TIMES           shift and go to state 17
    DIVIDE          shift and go to state 18
    EXP             shift and go to state 19


state 6

    (26) number -> MINUS . number
    (9) number -> . INTEGER
    (10) number -> . FLOAT
    (11) number -> . number PLUS number
    (12) number -> . number MINUS number
    (13) number -> . number TIMES number
    (14) number -> . number DIVIDE number
    (15) number -> . number EXP number
    (26) number -> . MINUS number
    (27) number -> . LPAREN number RPAREN

    INTEGER         shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 6
    LPAREN          shift and go to state 21

    number                         shift and go to state 20

state 7

    (21) atom -> number . PLUS atom
    (22) atom -> number . MINUS atom
    (23) atom -> number . TIMES atom
    (24) atom -> number . DIVIDE atom
    (25) atom -> number . EXP atom
    (30) atom -> number .
    (11) number -> number . PLUS number
    (12) number -> number . MINUS number
    (13) number -> number . TIMES number
    (14) number -> number . DIVIDE number
    (15) number -> number . EXP number

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for EXP resolved as shift
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    TIMES           shift and go to state 24
    DIVIDE          shift and go to state 25
    EXP             shift and go to state 26
    $end            reduce using rule 30 (atom -> number .)
    RPAREN          reduce using rule 30 (atom -> number .)

  ! PLUS            [ reduce using rule 30 (atom -> number .) ]
  ! MINUS           [ reduce using rule 30 (atom -> number .) ]
  ! TIMES           [ reduce using rule 30 (atom -> number .) ]
  ! DIVIDE          [ reduce using rule 30 (atom -> number .) ]
  ! EXP             [ reduce using rule 30 (atom -> number .) ]


state 8

    (28) atom -> LPAREN . atom RPAREN
    (27) number -> LPAREN . number RPAREN
    (16) atom -> . atom PLUS atom
    (17) atom -> . atom MINUS atom
    (18) atom -> . atom TIMES atom
    (19) atom -> . atom DIVIDE atom
    (20) atom -> . atom EXP atom
    (21) atom -> . number PLUS atom
    (22) atom -> . number MINUS atom
    (23) atom -> . number TIMES atom
    (24) atom -> . number DIVIDE atom
    (25) atom -> . number EXP atom
    (28) atom -> . LPAREN atom RPAREN
    (30) atom -> . number
    (31) atom -> . variable
    (32) atom -> . function
    (9) number -> . INTEGER
    (10) number -> . FLOAT
    (11) number -> . number PLUS number
    (12) number -> . number MINUS number
    (13) number -> . number TIMES number
    (14) number -> . number DIVIDE number
    (15) number -> . number EXP number
    (26) number -> . MINUS number
    (27) number -> . LPAREN number RPAREN
    (29) variable -> . NAME
    (8) function -> . NAME parameters

    LPAREN          shift and go to state 8
    INTEGER         shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 6
    NAME            shift and go to state 4

    atom                           shift and go to state 27
    number                         shift and go to state 28
    variable                       shift and go to state 9
    function                       shift and go to state 10

state 9

    (31) atom -> variable .

    PLUS            reduce using rule 31 (atom -> variable .)
    MINUS           reduce using rule 31 (atom -> variable .)
    TIMES           reduce using rule 31 (atom -> variable .)
    DIVIDE          reduce using rule 31 (atom -> variable .)
    EXP             reduce using rule 31 (atom -> variable .)
    $end            reduce using rule 31 (atom -> variable .)
    RPAREN          reduce using rule 31 (atom -> variable .)


state 10

    (32) atom -> function .

    PLUS            reduce using rule 32 (atom -> function .)
    MINUS           reduce using rule 32 (atom -> function .)
    TIMES           reduce using rule 32 (atom -> function .)
    DIVIDE          reduce using rule 32 (atom -> function .)
    EXP             reduce using rule 32 (atom -> function .)
    $end            reduce using rule 32 (atom -> function .)
    RPAREN          reduce using rule 32 (atom -> function .)


state 11

    (9) number -> INTEGER .

    PLUS            reduce using rule 9 (number -> INTEGER .)
    MINUS           reduce using rule 9 (number -> INTEGER .)
    TIMES           reduce using rule 9 (number -> INTEGER .)
    DIVIDE          reduce using rule 9 (number -> INTEGER .)
    EXP             reduce using rule 9 (number -> INTEGER .)
    $end            reduce using rule 9 (number -> INTEGER .)
    RPAREN          reduce using rule 9 (number -> INTEGER .)
    COMMA           reduce using rule 9 (number -> INTEGER .)


state 12

    (10) number -> FLOAT .

    PLUS            reduce using rule 10 (number -> FLOAT .)
    MINUS           reduce using rule 10 (number -> FLOAT .)
    TIMES           reduce using rule 10 (number -> FLOAT .)
    DIVIDE          reduce using rule 10 (number -> FLOAT .)
    EXP             reduce using rule 10 (number -> FLOAT .)
    $end            reduce using rule 10 (number -> FLOAT .)
    RPAREN          reduce using rule 10 (number -> FLOAT .)
    COMMA           reduce using rule 10 (number -> FLOAT .)


state 13

    (8) function -> NAME parameters .

    PLUS            reduce using rule 8 (function -> NAME parameters .)
    MINUS           reduce using rule 8 (function -> NAME parameters .)
    TIMES           reduce using rule 8 (function -> NAME parameters .)
    DIVIDE          reduce using rule 8 (function -> NAME parameters .)
    EXP             reduce using rule 8 (function -> NAME parameters .)
    $end            reduce using rule 8 (function -> NAME parameters .)
    RPAREN          reduce using rule 8 (function -> NAME parameters .)


state 14

    (6) parameters -> LPAREN . RPAREN
    (7) parameters -> LPAREN . arglist RPAREN
    (2) arglist -> . arglist COMMA NAME
    (3) arglist -> . arglist COMMA number
    (4) arglist -> . number
    (5) arglist -> . NAME
    (9) number -> . INTEGER
    (10) number -> . FLOAT
    (11) number -> . number PLUS number
    (12) number -> . number MINUS number
    (13) number -> . number TIMES number
    (14) number -> . number DIVIDE number
    (15) number -> . number EXP number
    (26) number -> . MINUS number
    (27) number -> . LPAREN number RPAREN

    RPAREN          shift and go to state 29
    NAME            shift and go to state 31
    INTEGER         shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 6
    LPAREN          shift and go to state 21

    arglist                        shift and go to state 30
    number                         shift and go to state 32

state 15

    (16) atom -> atom PLUS . atom
    (16) atom -> . atom PLUS atom
    (17) atom -> . atom MINUS atom
    (18) atom -> . atom TIMES atom
    (19) atom -> . atom DIVIDE atom
    (20) atom -> . atom EXP atom
    (21) atom -> . number PLUS atom
    (22) atom -> . number MINUS atom
    (23) atom -> . number TIMES atom
    (24) atom -> . number DIVIDE atom
    (25) atom -> . number EXP atom
    (28) atom -> . LPAREN atom RPAREN
    (30) atom -> . number
    (31) atom -> . variable
    (32) atom -> . function
    (9) number -> . INTEGER
    (10) number -> . FLOAT
    (11) number -> . number PLUS number
    (12) number -> . number MINUS number
    (13) number -> . number TIMES number
    (14) number -> . number DIVIDE number
    (15) number -> . number EXP number
    (26) number -> . MINUS number
    (27) number -> . LPAREN number RPAREN
    (29) variable -> . NAME
    (8) function -> . NAME parameters

    LPAREN          shift and go to state 8
    INTEGER         shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 6
    NAME            shift and go to state 4

    atom                           shift and go to state 33
    number                         shift and go to state 7
    variable                       shift and go to state 9
    function                       shift and go to state 10

state 16

    (17) atom -> atom MINUS . atom
    (16) atom -> . atom PLUS atom
    (17) atom -> . atom MINUS atom
    (18) atom -> . atom TIMES atom
    (19) atom -> . atom DIVIDE atom
    (20) atom -> . atom EXP atom
    (21) atom -> . number PLUS atom
    (22) atom -> . number MINUS atom
    (23) atom -> . number TIMES atom
    (24) atom -> . number DIVIDE atom
    (25) atom -> . number EXP atom
    (28) atom -> . LPAREN atom RPAREN
    (30) atom -> . number
    (31) atom -> . variable
    (32) atom -> . function
    (9) number -> . INTEGER
    (10) number -> . FLOAT
    (11) number -> . number PLUS number
    (12) number -> . number MINUS number
    (13) number -> . number TIMES number
    (14) number -> . number DIVIDE number
    (15) number -> . number EXP number
    (26) number -> . MINUS number
    (27) number -> . LPAREN number RPAREN
    (29) variable -> . NAME
    (8) function -> . NAME parameters

    LPAREN          shift and go to state 8
    INTEGER         shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 6
    NAME            shift and go to state 4

    atom                           shift and go to state 34
    number                         shift and go to state 7
    variable                       shift and go to state 9
    function                       shift and go to state 10

state 17

    (18) atom -> atom TIMES . atom
    (16) atom -> . atom PLUS atom
    (17) atom -> . atom MINUS atom
    (18) atom -> . atom TIMES atom
    (19) atom -> . atom DIVIDE atom
    (20) atom -> . atom EXP atom
    (21) atom -> . number PLUS atom
    (22) atom -> . number MINUS atom
    (23) atom -> . number TIMES atom
    (24) atom -> . number DIVIDE atom
    (25) atom -> . number EXP atom
    (28) atom -> . LPAREN atom RPAREN
    (30) atom -> . number
    (31) atom -> . variable
    (32) atom -> . function
    (9) number -> . INTEGER
    (10) number -> . FLOAT
    (11) number -> . number PLUS number
    (12) number -> . number MINUS number
    (13) number -> . number TIMES number
    (14) number -> . number DIVIDE number
    (15) number -> . number EXP number
    (26) number -> . MINUS number
    (27) number -> . LPAREN number RPAREN
    (29) variable -> . NAME
    (8) function -> . NAME parameters

    LPAREN          shift and go to state 8
    INTEGER         shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 6
    NAME            shift and go to state 4

    atom                           shift and go to state 35
    number                         shift and go to state 7
    variable                       shift and go to state 9
    function                       shift and go to state 10

state 18

    (19) atom -> atom DIVIDE . atom
    (16) atom -> . atom PLUS atom
    (17) atom -> . atom MINUS atom
    (18) atom -> . atom TIMES atom
    (19) atom -> . atom DIVIDE atom
    (20) atom -> . atom EXP atom
    (21) atom -> . number PLUS atom
    (22) atom -> . number MINUS atom
    (23) atom -> . number TIMES atom
    (24) atom -> . number DIVIDE atom
    (25) atom -> . number EXP atom
    (28) atom -> . LPAREN atom RPAREN
    (30) atom -> . number
    (31) atom -> . variable
    (32) atom -> . function
    (9) number -> . INTEGER
    (10) number -> . FLOAT
    (11) number -> . number PLUS number
    (12) number -> . number MINUS number
    (13) number -> . number TIMES number
    (14) number -> . number DIVIDE number
    (15) number -> . number EXP number
    (26) number -> . MINUS number
    (27) number -> . LPAREN number RPAREN
    (29) variable -> . NAME
    (8) function -> . NAME parameters

    LPAREN          shift and go to state 8
    INTEGER         shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 6
    NAME            shift and go to state 4

    atom                           shift and go to state 36
    number                         shift and go to state 7
    variable                       shift and go to state 9
    function                       shift and go to state 10

state 19

    (20) atom -> atom EXP . atom
    (16) atom -> . atom PLUS atom
    (17) atom -> . atom MINUS atom
    (18) atom -> . atom TIMES atom
    (19) atom -> . atom DIVIDE atom
    (20) atom -> . atom EXP atom
    (21) atom -> . number PLUS atom
    (22) atom -> . number MINUS atom
    (23) atom -> . number TIMES atom
    (24) atom -> . number DIVIDE atom
    (25) atom -> . number EXP atom
    (28) atom -> . LPAREN atom RPAREN
    (30) atom -> . number
    (31) atom -> . variable
    (32) atom -> . function
    (9) number -> . INTEGER
    (10) number -> . FLOAT
    (11) number -> . number PLUS number
    (12) number -> . number MINUS number
    (13) number -> . number TIMES number
    (14) number -> . number DIVIDE number
    (15) number -> . number EXP number
    (26) number -> . MINUS number
    (27) number -> . LPAREN number RPAREN
    (29) variable -> . NAME
    (8) function -> . NAME parameters

    LPAREN          shift and go to state 8
    INTEGER         shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 6
    NAME            shift and go to state 4

    atom                           shift and go to state 37
    number                         shift and go to state 7
    variable                       shift and go to state 9
    function                       shift and go to state 10

state 20

    (26) number -> MINUS number .
    (11) number -> number . PLUS number
    (12) number -> number . MINUS number
    (13) number -> number . TIMES number
    (14) number -> number . DIVIDE number
    (15) number -> number . EXP number

    PLUS            reduce using rule 26 (number -> MINUS number .)
    MINUS           reduce using rule 26 (number -> MINUS number .)
    TIMES           reduce using rule 26 (number -> MINUS number .)
    DIVIDE          reduce using rule 26 (number -> MINUS number .)
    EXP             reduce using rule 26 (number -> MINUS number .)
    $end            reduce using rule 26 (number -> MINUS number .)
    RPAREN          reduce using rule 26 (number -> MINUS number .)
    COMMA           reduce using rule 26 (number -> MINUS number .)

  ! PLUS            [ shift and go to state 39 ]
  ! MINUS           [ shift and go to state 38 ]
  ! TIMES           [ shift and go to state 40 ]
  ! DIVIDE          [ shift and go to state 41 ]
  ! EXP             [ shift and go to state 42 ]


state 21

    (27) number -> LPAREN . number RPAREN
    (9) number -> . INTEGER
    (10) number -> . FLOAT
    (11) number -> . number PLUS number
    (12) number -> . number MINUS number
    (13) number -> . number TIMES number
    (14) number -> . number DIVIDE number
    (15) number -> . number EXP number
    (26) number -> . MINUS number
    (27) number -> . LPAREN number RPAREN

    INTEGER         shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 6
    LPAREN          shift and go to state 21

    number                         shift and go to state 43

state 22

    (21) atom -> number PLUS . atom
    (11) number -> number PLUS . number
    (16) atom -> . atom PLUS atom
    (17) atom -> . atom MINUS atom
    (18) atom -> . atom TIMES atom
    (19) atom -> . atom DIVIDE atom
    (20) atom -> . atom EXP atom
    (21) atom -> . number PLUS atom
    (22) atom -> . number MINUS atom
    (23) atom -> . number TIMES atom
    (24) atom -> . number DIVIDE atom
    (25) atom -> . number EXP atom
    (28) atom -> . LPAREN atom RPAREN
    (30) atom -> . number
    (31) atom -> . variable
    (32) atom -> . function
    (9) number -> . INTEGER
    (10) number -> . FLOAT
    (11) number -> . number PLUS number
    (12) number -> . number MINUS number
    (13) number -> . number TIMES number
    (14) number -> . number DIVIDE number
    (15) number -> . number EXP number
    (26) number -> . MINUS number
    (27) number -> . LPAREN number RPAREN
    (29) variable -> . NAME
    (8) function -> . NAME parameters

    LPAREN          shift and go to state 8
    INTEGER         shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 6
    NAME            shift and go to state 4

    number                         shift and go to state 44
    atom                           shift and go to state 45
    variable                       shift and go to state 9
    function                       shift and go to state 10

state 23

    (22) atom -> number MINUS . atom
    (12) number -> number MINUS . number
    (16) atom -> . atom PLUS atom
    (17) atom -> . atom MINUS atom
    (18) atom -> . atom TIMES atom
    (19) atom -> . atom DIVIDE atom
    (20) atom -> . atom EXP atom
    (21) atom -> . number PLUS atom
    (22) atom -> . number MINUS atom
    (23) atom -> . number TIMES atom
    (24) atom -> . number DIVIDE atom
    (25) atom -> . number EXP atom
    (28) atom -> . LPAREN atom RPAREN
    (30) atom -> . number
    (31) atom -> . variable
    (32) atom -> . function
    (9) number -> . INTEGER
    (10) number -> . FLOAT
    (11) number -> . number PLUS number
    (12) number -> . number MINUS number
    (13) number -> . number TIMES number
    (14) number -> . number DIVIDE number
    (15) number -> . number EXP number
    (26) number -> . MINUS number
    (27) number -> . LPAREN number RPAREN
    (29) variable -> . NAME
    (8) function -> . NAME parameters

    LPAREN          shift and go to state 8
    INTEGER         shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 6
    NAME            shift and go to state 4

    number                         shift and go to state 46
    atom                           shift and go to state 47
    variable                       shift and go to state 9
    function                       shift and go to state 10

state 24

    (23) atom -> number TIMES . atom
    (13) number -> number TIMES . number
    (16) atom -> . atom PLUS atom
    (17) atom -> . atom MINUS atom
    (18) atom -> . atom TIMES atom
    (19) atom -> . atom DIVIDE atom
    (20) atom -> . atom EXP atom
    (21) atom -> . number PLUS atom
    (22) atom -> . number MINUS atom
    (23) atom -> . number TIMES atom
    (24) atom -> . number DIVIDE atom
    (25) atom -> . number EXP atom
    (28) atom -> . LPAREN atom RPAREN
    (30) atom -> . number
    (31) atom -> . variable
    (32) atom -> . function
    (9) number -> . INTEGER
    (10) number -> . FLOAT
    (11) number -> . number PLUS number
    (12) number -> . number MINUS number
    (13) number -> . number TIMES number
    (14) number -> . number DIVIDE number
    (15) number -> . number EXP number
    (26) number -> . MINUS number
    (27) number -> . LPAREN number RPAREN
    (29) variable -> . NAME
    (8) function -> . NAME parameters

    LPAREN          shift and go to state 8
    INTEGER         shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 6
    NAME            shift and go to state 4

    number                         shift and go to state 48
    atom                           shift and go to state 49
    variable                       shift and go to state 9
    function                       shift and go to state 10

state 25

    (24) atom -> number DIVIDE . atom
    (14) number -> number DIVIDE . number
    (16) atom -> . atom PLUS atom
    (17) atom -> . atom MINUS atom
    (18) atom -> . atom TIMES atom
    (19) atom -> . atom DIVIDE atom
    (20) atom -> . atom EXP atom
    (21) atom -> . number PLUS atom
    (22) atom -> . number MINUS atom
    (23) atom -> . number TIMES atom
    (24) atom -> . number DIVIDE atom
    (25) atom -> . number EXP atom
    (28) atom -> . LPAREN atom RPAREN
    (30) atom -> . number
    (31) atom -> . variable
    (32) atom -> . function
    (9) number -> . INTEGER
    (10) number -> . FLOAT
    (11) number -> . number PLUS number
    (12) number -> . number MINUS number
    (13) number -> . number TIMES number
    (14) number -> . number DIVIDE number
    (15) number -> . number EXP number
    (26) number -> . MINUS number
    (27) number -> . LPAREN number RPAREN
    (29) variable -> . NAME
    (8) function -> . NAME parameters

    LPAREN          shift and go to state 8
    INTEGER         shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 6
    NAME            shift and go to state 4

    number                         shift and go to state 50
    atom                           shift and go to state 51
    variable                       shift and go to state 9
    function                       shift and go to state 10

state 26

    (25) atom -> number EXP . atom
    (15) number -> number EXP . number
    (16) atom -> . atom PLUS atom
    (17) atom -> . atom MINUS atom
    (18) atom -> . atom TIMES atom
    (19) atom -> . atom DIVIDE atom
    (20) atom -> . atom EXP atom
    (21) atom -> . number PLUS atom
    (22) atom -> . number MINUS atom
    (23) atom -> . number TIMES atom
    (24) atom -> . number DIVIDE atom
    (25) atom -> . number EXP atom
    (28) atom -> . LPAREN atom RPAREN
    (30) atom -> . number
    (31) atom -> . variable
    (32) atom -> . function
    (9) number -> . INTEGER
    (10) number -> . FLOAT
    (11) number -> . number PLUS number
    (12) number -> . number MINUS number
    (13) number -> . number TIMES number
    (14) number -> . number DIVIDE number
    (15) number -> . number EXP number
    (26) number -> . MINUS number
    (27) number -> . LPAREN number RPAREN
    (29) variable -> . NAME
    (8) function -> . NAME parameters

    LPAREN          shift and go to state 8
    INTEGER         shift and go to state 11
    FLOAT           shift and go to state 12
    MINUS           shift and go to state 6
    NAME            shift and go to state 4

    number                         shift and go to state 52
    atom                           shift and go to state 53
    variable                       shift and go to state 9
    function                       shift and go to state 10

state 27

    (28) atom -> LPAREN atom . RPAREN
    (16) atom -> atom . PLUS atom
    (17) atom -> atom . MINUS atom
    (18) atom -> atom . TIMES atom
    (19) atom -> atom . DIVIDE atom
    (20) atom -> atom . EXP atom

    RPAREN          shift and go to state 54
    PLUS            shift and go to state 15
    MINUS           shift and go to state 16
    TIMES           shift and go to state 17
    DIVIDE          shift and go to state 18
    EXP             shift and go to state 19


state 28

    (27) number -> LPAREN number . RPAREN
    (21) atom -> number . PLUS atom
    (22) atom -> number . MINUS atom
    (23) atom -> number . TIMES atom
    (24) atom -> number . DIVIDE atom
    (25) atom -> number . EXP atom
    (30) atom -> number .
    (11) number -> number . PLUS number
    (12) number -> number . MINUS number
    (13) number -> number . TIMES number
    (14) number -> number . DIVIDE number
    (15) number -> number . EXP number

  ! shift/reduce conflict for RPAREN resolved as shift
  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for TIMES resolved as shift
  ! shift/reduce conflict for DIVIDE resolved as shift
  ! shift/reduce conflict for EXP resolved as shift
    RPAREN          shift and go to state 55
    PLUS            shift and go to state 22
    MINUS           shift and go to state 23
    TIMES           shift and go to state 24
    DIVIDE          shift and go to state 25
    EXP             shift and go to state 26

  ! RPAREN          [ reduce using rule 30 (atom -> number .) ]
  ! PLUS            [ reduce using rule 30 (atom -> number .) ]
  ! MINUS           [ reduce using rule 30 (atom -> number .) ]
  ! TIMES           [ reduce using rule 30 (atom -> number .) ]
  ! DIVIDE          [ reduce using rule 30 (atom -> number .) ]
  ! EXP             [ reduce using rule 30 (atom -> number .) ]


state 29

    (6) parameters -> LPAREN RPAREN .
